kubernetes-networks/canary/ingress-can.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
spec:
  rules:
  - http:
      paths:
      - path: /web
        backend:
          serviceName: svc-nginx2
          servicePort: 80
